tests/error/misc_errors/return_flag_callable.err
Error: Invalid annotation (at $FILE:7:19)
  | 
5 | 
6 | @guppy.declare
7 | def foo(f: "Fn[[], qubit @owned]") -> None: ...
  |                    ^^^^^^^^^^^^ `@` type annotations are not allowed in this position

Guppy compilation failed due to 1 previous error
